# embedded-graphics-dithering

./: Cargo.toml  README.md
.github/: dependabot.yml
bluenoise/: Cargo.toml
bluenoise/resources/16x16_png/: README.md
bluenoise/resources/16x16_raw/: LDR_LLL1_0.gray  LDR_LLL1_1.gray  LDR_LLL1_10.gray  LDR_LLL1_11.gray  LDR_LLL1_12.gray  LDR_LLL1_13.gray  LDR_LLL1_14.gray  LDR_LLL1_15.gray  LDR_LLL1_16.gray  LDR_LLL1_17.gray  LDR_LLL1_18.gray  LDR_LLL1_19.gray  LDR_LLL1_2.gray  LDR_LLL1_20.gray  LDR_LLL1_21.gray  LDR_LLL1_22.gray  LDR_LLL1_23.gray  LDR_LLL1_24.gray  LDR_LLL1_25.gray  LDR_LLL1_26.gray  LDR_LLL1_27.gray  LDR_LLL1_28.gray  LDR_LLL1_29.gray  LDR_LLL1_3.gray  LDR_LLL1_30.gray  LDR_LLL1_31.gray  LDR_LLL1_32.gray  LDR_LLL1_33.gray  LDR_LLL1_34.gray  LDR_LLL1_35.gray  LDR_LLL1_36.gray  LDR_LLL1_37.gray  LDR_LLL1_38.gray  LDR_LLL1_39.gray  LDR_LLL1_4.gray  LDR_LLL1_40.gray  LDR_LLL1_41.gray  LDR_LLL1_42.gray  LDR_LLL1_43.gray  LDR_LLL1_44.gray  (+24 more)
bluenoise/src/: main.rs
dithering/: Cargo.toml
example/: Cargo.toml
example/src/: dithering_adaptor.rs  main.rs
